--- a/Frontend/src/app/main/about/about.component.html
+++ b/Frontend/src/app/main/about/about.component.html
@@ -4,7 +4,7 @@
             <span>
                 This application was created as a part of engineering thesis at AGH University of Kraków.
                 <br>
-                Data and background map were taken from <a href="https://msip.krakow.pl">Gmina Miejska Kraków, Portal MSIP Obserwatorium</a>.
+                Data was taken from <a href="https://msip.krakow.pl">Gmina Miejska Kraków, Portal MSIP Obserwatorium</a> and <a href="https://download.geofabrik.de/europe/poland/malopolskie.html">Geofabrik</a>.
                 <br>
                 During the development of this application, the following frameworks and technologies were used:    
             </span>
